# fb-messenger-crossplatform

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  TASKS.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml  test-build.yml
docs/: apple-code-signing.md
scripts/: pull-debug-artifacts.sh  verify-release-bump-pr-flow.mjs  verify-release-registry-condition.mjs  verify-release-winget-path.mjs
src/: index.html  loading.html
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  messengerx.desktop.hbs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/services/: auth.rs  cache.rs  locale.rs  mod.rs  network.rs  notification.rs  notification_dispatcher.rs
src-tauri/tests/: crash_detect.rs  logout_handlers.rs
src/scripts/: bridge.ts  main.ts  notifications.ts  offline.ts  unread.ts
src/settings/: index.html  settings.css  settings.ts
src/styles/: main.css
