[package]
name = "messengerx"
version = "1.3.11"
description = "Cross-platform Messenger desktop client (Tauri)"
authors = ["lasakondrej"]
license = "MIT"
repository = ""
default-run = "messengerx"
edition = "2021"
rust-version = "1.70"

[lib]
name = "messengerx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
log = "0.4"
url = "2"
sys-locale = "0.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.0.0-beta.0"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSError", "NSObject", "NSString"] }
objc2-user-notifications = { version = "0.3.2", default-features = false, features = ["std", "block2", "UNUserNotificationCenter", "UNNotification", "UNNotificationRequest", "UNNotificationContent", "UNNotificationSound", "UNNotificationTrigger"] }
